Initial commit with Accounting and Note APIs